--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/et_repo_name" android:id="@+id/recyclerid"/>
+            app:layout_constraintTop_toBottomOf="@+id/et_repo_name"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
