--- a/app/src/main/res/layout/repo_cardview.xml
+++ b/app/src/main/res/layout/repo_cardview.xml
@@ -8,9 +8,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <TextView android:layout_width="match_parent"
+        <TextView android:layout_width="wrap_content"
                   android:id="@+id/tv_repo_name"
                   android:layout_gravity="center"
-                  android:layout_height="match_parent"/>
+                  android:layout_height="wrap_content"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
